--- a/custom-translations/ka.po
+++ b/custom-translations/ka.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2019-07-12 09:43+0000\n"
-"PO-Revision-Date: 2019-07-12 09:43+0000\n"
+"POT-Creation-Date: 2019-07-16 13:10+0000\n"
+"PO-Revision-Date: 2019-07-16 13:10+0000\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -12,97 +12,20 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-msgid "Enter your email address or username."
-msgstr ""
-"შეიყვანეთ თქვენი "
-"ელ.ფოსტის მისამართი"
-
-msgid "Email or username"
-msgstr "შეიყვანეთ ელ.ფოსტა "
-
-msgid "Enter the password that accompanies your email address."
-msgstr "შეიყვანეთ პაროლი "
-
-msgid "Password"
-msgstr "პაროლი"
-
-msgid "Log in"
-msgstr "შესვლა"
-
-msgid "Add effect"
-msgstr "ეფექტის დამატება"
-
-msgid "Save configuration"
-msgstr "კონფიგურაციის შენახვა"
-
-msgid "Confirm"
-msgstr "დადასტურება"
-
-msgid "Filter"
-msgstr "ფილტრი"
-
-msgid "Submit"
-msgstr "დადასტურება"
-
-msgid "Search"
-msgstr "ძიება"
-
-msgid "Settings"
-msgstr "პარამეტრები"
-
-msgid "Upload"
-msgstr "ატვირთვა"
-
-msgid "Delete"
-msgstr "წაშლა"
-
-msgid "Remove"
-msgstr "ამოშლა"
-
-msgid "Add"
-msgstr "დამატება"
-
-msgid "Create"
-msgstr "შექმნა"
-
-msgid "Install"
-msgstr "დაყენება"
-
-msgid "Save"
-msgstr "შენახვა"
-
-msgid "Export"
-msgstr "ექსპორტი"
-
-msgid "Import"
-msgstr "იმპორტი"
-
-msgid "Update"
-msgstr "განახლება"
-
-msgid "Manage"
-msgstr "მართვა"
-
-msgid "Configure"
-msgstr "კონფიგურირება"
-
-msgid "Download"
-msgstr "გადმოტვირთვა"
-
-msgid "Edit"
-msgstr "რედაქტირება"
-
-msgid "Cancel"
-msgstr "გაუქმება"
-
-msgid "Block"
-msgstr "ბლოკი"
+msgid "Content type"
+msgstr "კონტენტის ტიპი"
 
 msgid "Vocabulary"
 msgstr "ლექსიკონი"
 
-msgid "Home"
-msgstr "მთავარი"
+msgid "Description"
+msgstr "აღწერა"
+
+msgid "User"
+msgstr "მომხმარებელი"
+
+msgid "Block"
+msgstr "ბლოკი"
 
 msgid "Text format"
 msgstr "ტექსტის ფორმატი"
@@ -110,8 +33,8 @@ msgstr "ტექსტის ფორმატი"
 msgid "Language"
 msgstr "ენა"
 
-msgid "Content type"
-msgstr "კონტენტის ტიპი"
+msgid "Page"
+msgstr "გვერდი"
 
 msgid "Menu"
 msgstr "მენიუ"
@@ -122,23 +45,11 @@ msgstr "როლი"
 msgid "Date format"
 msgstr "თარიღის ფორმატი"
 
-msgid "Create new account"
-msgstr "რეგისტრაცია"
-
-msgid "Reset your password"
-msgstr "პაროლის აღდგენა"
-
-msgid "Description"
-msgstr "აღწერა"
-
-msgid "Content"
-msgstr "კონტენტი"
-
-msgid "User"
-msgstr "მომხმარებელი"
-
 msgid "Forms"
 msgstr "ფორმები"
+
+msgid "Home"
+msgstr "მთავარი"
 
 msgid "User interface"
 msgstr "მომხმარებლის ინტერფეისი"
@@ -157,6 +68,9 @@ msgstr "მომხმარებელი"
 
 msgid "Pages"
 msgstr "გვერდები"
+
+msgid "Save configuration"
+msgstr "კონფიგურაციის შენახვა"
 
 msgid "delete"
 msgstr "წაშლა"
@@ -184,8 +98,17 @@ msgstr "სუფიქსი"
 msgid "Approve"
 msgstr "დადასტურება"
 
+msgid "Delete"
+msgstr "წაშლა"
+
+msgid "Submit"
+msgstr "დადასტურება"
+
 msgid "Operations"
 msgstr "ოპერაციები"
+
+msgid "Content"
+msgstr "კონტენტი"
 
 msgid "Attribute"
 msgstr "ატრიბუტი"
@@ -240,6 +163,15 @@ msgstr "ოპერაციები"
 
 msgid "disabled"
 msgstr "გამორთულია"
+
+msgid "Confirm"
+msgstr "დადასტურება"
+
+msgid "Cancel"
+msgstr "გაუქმება"
+
+msgid "Remove"
+msgstr "ამოშლა"
 
 msgid "Last comment"
 msgstr "ბოლო კომენტრარი"
@@ -309,6 +241,9 @@ msgstr "მთავარი გვერდი"
 msgid "Home page"
 msgstr "მთავარი გვერდი"
 
+msgid "Download"
+msgstr "გადმოტვირთვა"
+
 msgid "Version"
 msgstr "ვერსია"
 
@@ -336,6 +271,9 @@ msgstr "ფაილის მდებარეობა"
 msgid "Advanced options"
 msgstr "დამატებითი ოფციები"
 
+msgid "Edit"
+msgstr "რედაქტირება"
+
 msgid "Date"
 msgstr "თარიღი"
 
@@ -344,6 +282,9 @@ msgstr "ზომა"
 
 msgid "Links"
 msgstr "ბმულები"
+
+msgid "Search"
+msgstr "ძიება"
 
 msgid "Daily"
 msgstr "ყოველდღიური"
@@ -369,6 +310,9 @@ msgstr "შეტყობინება"
 msgid "Account Name"
 msgstr "მომხმარებლის სახელი"
 
+msgid "Password"
+msgstr "პაროლი"
+
 msgid "Block settings"
 msgstr "ბლოკის პარამეტრები"
 
@@ -390,9 +334,6 @@ msgstr "სურათი"
 msgid "Types"
 msgstr "ტიპები"
 
-msgid "Hierarchy"
-msgstr "იერარქია"
-
 msgid "Required"
 msgstr "სავალდებულო"
 
@@ -407,6 +348,9 @@ msgstr "კატეგორია"
 
 msgid "Add container"
 msgstr "კონტეინერის დამატება"
+
+msgid "Settings"
+msgstr "პარამეტრები"
 
 msgid "Name"
 msgstr "სახელი"
@@ -426,8 +370,14 @@ msgstr "მშობელ გვერდზე გადასვლა"
 msgid "Go to next page"
 msgstr "შემდეგ გვერდზე გადასვლა"
 
+msgid "Import"
+msgstr "იმპორტი"
+
 msgid "Book"
 msgstr "წიგნი"
+
+msgid "Export"
+msgstr "ექსპორტი"
 
 msgid "settings"
 msgstr "პარამეტრები"
@@ -446,6 +396,9 @@ msgstr "დახმარება"
 
 msgid "Image settings"
 msgstr "სურათის პარამეტრები"
+
+msgid "Update"
+msgstr "განახლება"
 
 msgid "Open"
 msgstr "ღია"
@@ -489,6 +442,9 @@ msgstr "ახლის დამატება"
 msgid "Time"
 msgstr "დრო"
 
+msgid "Add"
+msgstr "დამატება"
+
 msgid "Length"
 msgstr "სიგრძე"
 
@@ -530,6 +486,9 @@ msgstr "ფორუმის სახელი"
 
 msgid "forum"
 msgstr "ფორუმი"
+
+msgid "Manage"
+msgstr "მართვა"
 
 msgid "Refresh"
 msgstr "განახლება"
@@ -582,6 +541,9 @@ msgstr "უცნობი"
 msgid "Attachment"
 msgstr "მიმაგრებული ფაილი"
 
+msgid "Upload"
+msgstr "ატვირთვა"
+
 msgid "Picture"
 msgstr "სურათი"
 
@@ -602,6 +564,9 @@ msgstr "ოპერაცია"
 
 msgid "Continue"
 msgstr "გაგრძელება"
+
+msgid "Configure"
+msgstr "კონფიგურირება"
 
 msgid "Email"
 msgstr "ელ. ფოსტა"
@@ -639,6 +604,9 @@ msgstr "შეტყობინების სათაური."
 msgid "Number of columns"
 msgstr "სვეტების რაოდენობა"
 
+msgid "Create"
+msgstr "შექმნა"
+
 msgid "Separator"
 msgstr "გამყოფი"
 
@@ -669,8 +637,8 @@ msgstr ""
 "კონტენტის ტიპი შვილობილი "
 "გვერდებისთვის"
 
-msgid "Active"
-msgstr "აქტიური"
+msgid "All"
+msgstr "ყველა"
 
 msgid "Done"
 msgstr "დასრულება"
@@ -695,9 +663,6 @@ msgstr "სათაურის გადაწერა"
 
 msgid "CSS class"
 msgstr "CSS კლასი"
-
-msgid "Page"
-msgstr "გვერდი"
 
 msgid "View arguments"
 msgstr "არგუმენტების ნახვა"
@@ -839,6 +804,9 @@ msgstr "გამოქვეყნებული"
 
 msgid "Signature"
 msgstr "ხელმოწერა"
+
+msgid "Filter"
+msgstr "ფილტრი"
 
 msgid "Location"
 msgstr "ადგილმდებარეობა"
@@ -1166,6 +1134,9 @@ msgstr "ყველას მონიშვნა"
 msgid "User login"
 msgstr "მომხმარებლის ავტორიზაცია"
 
+msgid "Log in"
+msgstr "შესვლა"
+
 msgid "Link text"
 msgstr "ბმულის ტექსტი"
 
@@ -1215,6 +1186,9 @@ msgstr "ანონიმური"
 
 msgid "Provider"
 msgstr "პროვაიდერი"
+
+msgid "Install"
+msgstr "დაყენება"
 
 msgid "Save and edit"
 msgstr "შენახვა და რედაქტირება"
@@ -1272,6 +1246,11 @@ msgstr "კომენტარები"
 
 msgid "Full"
 msgstr "სრული"
+
+msgid "1 new"
+msgid_plural "@count new"
+msgstr[0] "1 ახალი"
+msgstr[1] "@count ახალი"
 
 msgid "Condition"
 msgstr "პირობა"
@@ -1886,6 +1865,9 @@ msgstr "დაიწერა"
 
 msgid "Hidden"
 msgstr "დამალული"
+
+msgid "Show"
+msgstr "ჩვენება"
 
 msgid "Site language"
 msgstr "საიტის ენა"
@@ -2550,8 +2532,8 @@ msgstr "გვერდი ვერ მოიძებნა"
 msgid "More help"
 msgstr "მეტი დახმარება"
 
-msgid "Add terms"
-msgstr "ტერმინების დამატება"
+msgid "Sizes"
+msgstr "ზომები"
 
 msgid "« first"
 msgstr "« პირველი"
@@ -2826,15 +2808,6 @@ msgstr "საიტის ინსტალაცია"
 msgid "Finish translations"
 msgstr "თარგმანის დასრულება"
 
-msgid ""
-"By default, dates in this site will be displayed in the chosen time "
-"zone."
-msgstr ""
-"ნაგულისხმევად, ამ საიტზე "
-"თარიღები გამოჩნდება "
-"არჩეული დროის სარტყლის "
-"შესაბამისად."
-
 msgid "Update notifications"
 msgstr "განახლების შეტყობინებები"
 
@@ -2953,6 +2926,9 @@ msgstr "სტილის სახელი"
 msgid "Update effect"
 msgstr "ეფექტის განახლება"
 
+msgid "Add effect"
+msgstr "ეფექტის დამატება"
+
 msgctxt "Long month name"
 msgid "January"
 msgstr "იანვარი"
@@ -3066,6 +3042,63 @@ msgid "Database system version"
 msgstr "მონაცემთა ბაზის ვერსია"
 
 msgid ""
+"A message has been sent to the new email address %email to confirm the "
+"change. Until confirmed, your current address will be used."
+msgstr ""
+"ელ-ფოსტის ცვლილების "
+"დამადასტურებელი "
+"შეტყობინება "
+"გამოგზავნილია "
+"მისამართზე: %email. "
+"შეტყობინების "
+"დადასტურებამდე თქვენი "
+"ელ-ფოსტა რჩება უცვლელი."
+
+msgid "Main navigation"
+msgstr "Main navigation"
+
+msgid "Site section links"
+msgstr "Site section links"
+
+msgid "Active"
+msgstr "აქტიური"
+
+msgid "Enter your email address or username."
+msgstr ""
+"შეიყვანეთ თქვენი "
+"ელ.ფოსტის მისამართი"
+
+msgid "Email or username"
+msgstr "შეიყვანეთ ელ.ფოსტა "
+
+msgid "Enter the password that accompanies your email address."
+msgstr "შეიყვანეთ პაროლი "
+
+msgid "Save"
+msgstr "შენახვა"
+
+msgid "Create new account"
+msgstr "რეგისტრაცია"
+
+msgid "Reset your password"
+msgstr "პაროლის აღდგენა"
+
+msgid "Hierarchy"
+msgstr "იერარქია"
+
+msgid "Add terms"
+msgstr "ტერმინების დამატება"
+
+msgid ""
+"By default, dates in this site will be displayed in the chosen time "
+"zone."
+msgstr ""
+"ნაგულისხმევად, ამ საიტზე "
+"თარიღები გამოჩნდება "
+"არჩეული დროის სარტყლის "
+"შესაბამისად."
+
+msgid ""
 "A valid email address. All emails from the system will be sent to this "
 "address. The email address is not made public and will only be used if "
 "you wish to receive a new password or wish to receive certain news or "
@@ -3121,15 +3154,6 @@ msgstr "სუსტი"
 msgid "Strong"
 msgstr "ძლიერი"
 
-msgid "Main navigation"
-msgstr "Main navigation"
-
-msgid "Site section links"
-msgstr "Site section links"
-
-msgid "All"
-msgstr "ყველა"
-
 msgid "News"
 msgstr "სიახლეები"
 
@@ -3140,9 +3164,6 @@ msgstr ""
 "პაროლის აღდგენის "
 "ინსტრუქციის სანახავად "
 "შეამოწმეთ თქვენი ელ.ფოსტა"
-
-msgid "Show"
-msgstr "ჩვენება"
 
 msgid "Current password"
 msgstr "მიმდინარე პაროლი"
@@ -3168,14 +3189,6 @@ msgstr ""
 "არასწორი სახელი ან პაროლი. "
 "<a href=\":password\">დაგავიწყდა "
 "პაროლი?</a>"
-
-msgid "1 new"
-msgid_plural "@count new"
-msgstr[0] "1 ახალი"
-msgstr[1] "@count ახალი"
-
-msgid "Sizes"
-msgstr "ზომები"
 
 msgid ""
 "Your current password is missing or incorrect; it's required to change "
@@ -3576,19 +3589,6 @@ msgstr "ახალი ელ.ფოსტა"
 msgid "Enter new email"
 msgstr "შეიყვანეთ ახალი ელ.ფოსტა"
 
-msgid ""
-"A message has been sent to the new email address %email to confirm the "
-"change. Until confirmed, your current address will be used."
-msgstr ""
-"ელ-ფოსტის ცვლილების "
-"დამადასტურებელი "
-"შეტყობინება "
-"გამოგზავნილია "
-"მისამართზე: %email. "
-"შეტყობინების "
-"დადასტურებამდე თქვენი "
-"ელ-ფოსტა რჩება უცვლელი."
-
 msgid "Your email address has been updated to %mail"
 msgstr ""
 "თქვენი განახლებული "
@@ -3596,4 +3596,14 @@ msgstr ""
 
 msgid "Email confirmation confirmed."
 msgstr "ელ-ფოსტა დადასტურებულია"
+
+msgid "The current password you provided is incorrect."
+msgstr ""
+"მიმდინარე პაროლი "
+"არასწორია."
+
+msgid "Your password has been changed."
+msgstr ""
+"თქვენი პაროლი წარმატებით "
+"შეიცვალა."
 
