--- a/custom-translations/ka.po
+++ b/custom-translations/ka.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2019-08-15 10:22+0000\n"
-"PO-Revision-Date: 2019-08-15 10:22+0000\n"
+"POT-Creation-Date: 2019-08-30 14:07+0000\n"
+"PO-Revision-Date: 2019-08-30 14:07+0000\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -23,6 +23,12 @@ msgstr "აღწერა"
 
 msgid "User"
 msgstr "მომხმარებელი"
+
+msgid "Content"
+msgstr "კონტენტი"
+
+msgid "Donation"
+msgstr "შემოწირულობა"
 
 msgid "Block"
 msgstr "ბლოკი"
@@ -106,9 +112,6 @@ msgstr "დადასტურება"
 
 msgid "Operations"
 msgstr "ოპერაციები"
-
-msgid "Content"
-msgstr "კონტენტი"
 
 msgid "Attribute"
 msgstr "ატრიბუტი"
@@ -333,9 +336,6 @@ msgstr "სურათი"
 
 msgid "Types"
 msgstr "ტიპები"
-
-msgid "Hierarchy"
-msgstr "იერარქია"
 
 msgid "Required"
 msgstr "სავალდებულო"
@@ -2538,9 +2538,6 @@ msgstr "მეტი დახმარება"
 msgid "Sizes"
 msgstr "ზომები"
 
-msgid "Add terms"
-msgstr "ტერმინების დამატება"
-
 msgid "« first"
 msgstr "« პირველი"
 
@@ -2814,15 +2811,6 @@ msgstr "საიტის ინსტალაცია"
 msgid "Finish translations"
 msgstr "თარგმანის დასრულება"
 
-msgid ""
-"By default, dates in this site will be displayed in the chosen time "
-"zone."
-msgstr ""
-"ნაგულისხმევად, ამ საიტზე "
-"თარიღები გამოჩნდება "
-"არჩეული დროის სარტყლის "
-"შესაბამისად."
-
 msgid "Update notifications"
 msgstr "განახლების შეტყობინებები"
 
@@ -3069,6 +3057,9 @@ msgstr ""
 "დადასტურებამდე თქვენი "
 "ელ-ფოსტა რჩება უცვლელი."
 
+msgid "Donation status"
+msgstr "შემოწირულობის სტატუსი"
+
 msgid "Main navigation"
 msgstr "Main navigation"
 
@@ -3077,6 +3068,67 @@ msgstr "Site section links"
 
 msgid "Active"
 msgstr "აქტიური"
+
+msgid "Enter your email address or username."
+msgstr ""
+"შეიყვანეთ თქვენი "
+"ელ.ფოსტის მისამართი"
+
+msgid "Email or username"
+msgstr "შეიყვანეთ ელ.ფოსტა "
+
+msgid "Enter the password that accompanies your email address."
+msgstr "შეიყვანეთ პაროლი "
+
+msgid "Save"
+msgstr "შენახვა"
+
+msgid "Create new account"
+msgstr "რეგისტრაცია"
+
+msgid "Reset your password"
+msgstr "პაროლის აღდგენა"
+
+msgid "Hierarchy"
+msgstr "იერარქია"
+
+msgid "Add terms"
+msgstr "ტერმინების დამატება"
+
+msgid ""
+"By default, dates in this site will be displayed in the chosen time "
+"zone."
+msgstr ""
+"ნაგულისხმევად, ამ საიტზე "
+"თარიღები გამოჩნდება "
+"არჩეული დროის სარტყლის "
+"შესაბამისად."
+
+msgid ""
+"A valid email address. All emails from the system will be sent to this "
+"address. The email address is not made public and will only be used if "
+"you wish to receive a new password or wish to receive certain news or "
+"notifications by email."
+msgstr ""
+"შეიყვანეთ თქვენი ელ.ფოსტა. "
+"ყველა შეტყობინება "
+"მოგივათ მითითებულ "
+"მისამართზე. ინფორმაცია "
+"კონფიდენციალურია და "
+"იქნება გამოყენებული "
+"მხოლოდ თქვენი "
+"სურვილისამებრ ახალი "
+"პაროლის და "
+"შეტყობინებების "
+"მისაღებად."
+
+msgid "Provide a password for the new account in both fields."
+msgstr "შეიყვანეთ პაროლი"
+
+msgid "Recommendations to make your password stronger:"
+msgstr ""
+"ძლიერი პაროლისთვის "
+"გაითვალისწინეთ:"
 
 msgid "There is no content"
 msgstr "კონტენტი არ არსებობს "
@@ -3121,46 +3173,6 @@ msgstr "აღდგენა"
 msgid "Ged amount"
 msgstr "Ged-ების რაოდენობა"
 
-msgid "Enter your email address or username."
-msgstr ""
-"შეიყვანეთ თქვენი "
-"ელ.ფოსტის მისამართი"
-
-msgid "Email or username"
-msgstr "შეიყვანეთ ელ.ფოსტა "
-
-msgid "Enter the password that accompanies your email address."
-msgstr "შეიყვანეთ პაროლი "
-
-msgid "Create new account"
-msgstr "რეგისტრაცია"
-
-msgid "Reset your password"
-msgstr "პაროლის აღდგენა"
-
-msgid ""
-"A valid email address. All emails from the system will be sent to this "
-"address. The email address is not made public and will only be used if "
-"you wish to receive a new password or wish to receive certain news or "
-"notifications by email."
-msgstr ""
-"შეიყვანეთ თქვენი ელ.ფოსტა. "
-"ყველა შეტყობინება "
-"მოგივათ მითითებულ "
-"მისამართზე. ინფორმაცია "
-"კონფიდენციალურია და "
-"იქნება გამოყენებული "
-"მხოლოდ თქვენი "
-"სურვილისამებრ ახალი "
-"პაროლის და "
-"შეტყობინებების "
-"მისაღებად."
-
-msgid "Recommendations to make your password stronger:"
-msgstr ""
-"ძლიერი პაროლისთვის "
-"გაითვალისწინეთ:"
-
 msgid "Make it at least 12 characters"
 msgstr "გახადეთ 12 სიმბოლოზე მეტი"
 
@@ -3190,9 +3202,6 @@ msgstr "სუსტი"
 
 msgid "Strong"
 msgstr "ძლიერი"
-
-msgid "Provide a password for the new account in both fields."
-msgstr "შეიყვანეთ პაროლი"
 
 msgid ""
 "Password reset instructions will be sent to your registered email "
@@ -3233,29 +3242,11 @@ msgstr ""
 "არ გაქვთ ანგარიში? გაიარეთ "
 "რეგისტრაცია მარტივად"
 
-msgid ""
-"Select a politician, specify the percentage with which you support "
-"him/her and take part in establishing the party listing."
-msgstr ""
-"აირჩიეთ პოლიტიკოსი, "
-"მიუთითეთ თქვენი წონის "
-"რამდენი %-ით უჭერთ მას "
-"მხარს და მიიღე "
-"მონაწილეობა პარტიული "
-"სიის ჩამოყალიბებაში."
+msgid "News"
+msgstr "სიახლეები"
 
-msgid "Enter your referral"
-msgstr "მიუთითეთ REFERRAL-ი"
-
-msgid ""
-"You can also use Referral to refer to the person who informed you "
-"about us and you decided to register."
-msgstr ""
-"თქვენ შეგიძლიათ მიუთითოთ "
-"Referral-ი - ანუ ვისი "
-"მეშვეობითაც გაიგეთ ჩვენს "
-"შესახებ და გადაწყვიტეთ "
-"დარეგისტრირება"
+msgid "Current password"
+msgstr "მიმდინარე პაროლი"
 
 msgid "* Referral is not required"
 msgstr ""
@@ -3286,12 +3277,6 @@ msgstr "ვიდეო ბლოგი"
 msgid "All videos"
 msgstr "ყველა ვიდეო"
 
-msgid "Save"
-msgstr "შენახვა"
-
-msgid "News"
-msgstr "სიახლეები"
-
 msgid "Reset password"
 msgstr "პაროლის აღდგენა"
 
@@ -3306,9 +3291,6 @@ msgid "The changes have been saved."
 msgstr ""
 "ცვლილებები წარმატებით "
 "შეინახა"
-
-msgid "Current password"
-msgstr "მიმდინარე პაროლი"
 
 msgid ""
 "A welcome message with further instructions has been sent to your "
@@ -3336,67 +3318,29 @@ msgstr ""
 "პაროლი სავალდებულოა "
 "%ელ-ფოსტის შესაცვლელად."
 
-msgid "Further instructions have been sent to your email address."
+msgid ""
+"Select a politician, specify the percentage with which you support "
+"him/her and take part in establishing the party listing."
 msgstr ""
-"შემდგომი ინსტრუქციები "
-"გაიგზავნა თქვენი "
-"ელექტრონული ფოსტის "
-"მისამართით."
+"აირჩიეთ პოლიტიკოსი, "
+"მიუთითეთ თქვენი წონის "
+"რამდენი %-ით უჭერთ მას "
+"მხარს და მიიღე "
+"მონაწილეობა პარტიული "
+"სიის ჩამოყალიბებაში."
 
-msgid "Reset password"
-msgstr "პაროლის აღდგენა"
+msgid "Enter your referral"
+msgstr "მიუთითეთ REFERRAL-ი"
 
-msgid "* Referral is not required"
+msgid ""
+"You can also use Referral to refer to the person who informed you "
+"about us and you decided to register."
 msgstr ""
-"* Referral-ის მითითება "
-"სავალდებულო არაა"
-
-msgid "Personal ID"
-msgstr "მიუთითეთ პირადი ნომერი"
-
-msgid "First name"
-msgstr "მიუთითეთ სახელი"
-
-msgid "Last name"
-msgstr "მიუთითეთ გვარი"
-
-msgid "Date of birth"
-msgstr ""
-"მიუთითეთ დაბადების "
-"თარიღი"
-
-msgid "Phone number"
-msgstr "ტელეფონის ნომერი"
-
-msgid "Amount of GeD"
-msgstr "მიუთითეთ GeD-ების რაოდენობა"
-
-msgid "First Name"
-msgstr "სახელი"
-
-msgid "Last Name"
-msgstr "გვარი"
-
-msgid "Video blog"
-msgstr "ვიდეო ბლოგი"
-
-msgid "All videos"
-msgstr "ყველა ვიდეო"
-
-msgid "There is no content"
-msgstr "კონტენტი არ არსებობს "
-
-msgid "You must agree to the terms and conditions before register"
-msgstr ""
-"რეგისტრაციის "
-"გასაგრძელებლად საჭიროა "
-"დაეთანხმოთ საიტის წესებს!"
-
-msgid "Share"
-msgstr "გაზიარება"
-
-msgid "Print"
-msgstr "ამობეჭვდა"
+"თქვენ შეგიძლიათ მიუთითოთ "
+"Referral-ი - ანუ ვისი "
+"მეშვეობითაც გაიგეთ ჩვენს "
+"შესახებ და გადაწყვიტეთ "
+"დარეგისტრირება"
 
 msgid "Become a politician"
 msgstr "გახდი პოლიტიკოსი"
@@ -3410,6 +3354,11 @@ msgstr ""
 
 msgid "Want to be politician"
 msgstr "მინდა პოლიტიკოსობა"
+
+msgid "General settings for this site."
+msgstr ""
+"საიტის ზოგადი "
+"პარამეტრები."
 
 msgid "Edit user"
 msgstr "პარამეტრების შეცვლა"
@@ -3473,27 +3422,14 @@ msgstr ""
 msgid "Social Media"
 msgstr "სოციალური მედია"
 
+msgid "- Select -"
+msgstr "- აირჩიეთ - "
+
+msgid "Categories"
+msgstr "კატეგორიები"
+
 msgid "General settings"
 msgstr "ძირითადი პარამეტრები."
-
-msgid "Become a politician"
-msgstr "გახდი პოლიტიკოსი"
-
-msgid "Become a politician, get enough votes and get into the party list"
-msgstr ""
-"გახდი პოლიტიკოსი, "
-"დააგროვე ხმების "
-"საკმარისი რაოდენობა და "
-"მოხვდი პარტიულ სიაში"
-
-msgid "Want to be politician"
-msgstr "მინდა პოლიტიკოსობა"
-
-msgid "Edit user"
-msgstr "პარამეტრების შეცვლა"
-
-msgid "Change Password"
-msgstr "პაროლის შეცვლა"
 
 msgid "Login"
 msgstr "შესვლა"
@@ -3565,9 +3501,6 @@ msgstr "პოლიტიკოსები"
 
 msgid "Partners"
 msgstr "პარტნიორები"
-
-msgid "All news"
-msgstr "ყველა სიახლე"
 
 msgid ""
 "Select a politician, Specify the percentage of your weight\n"
@@ -3667,10 +3600,8 @@ msgstr ""
 
 msgid "You have recieved"
 msgstr ""
-"პაროლის ველი ცარიელია ან "
-"არასწორად არის შეყვანილი. "
-"პაროლი სავალდებულოა "
-"%ელ-ფოსტის შესაცვლელად."
+"თქვენ ჩაგერიცხათ\r\n"
+""
 
 msgid "New Email"
 msgstr "ახალი ელ.ფოსტა"
@@ -3699,20 +3630,11 @@ msgstr ""
 msgid "Change password"
 msgstr "პაროლის შეცვლა"
 
-msgid "Donate to politician"
-msgstr "დააფინანსე პოლიტიკოსი"
+msgid "Girchi party list"
+msgstr "გირჩის პარტიული სია"
 
-msgid "Politician rating"
-msgstr "პოლიტიკური წონა"
-
-msgid "Politician Ged"
-msgstr "გამომუშავებული GED-ები"
-
-msgid "Referrals"
-msgstr "რეფერალები"
-
-msgid "Learn about politician"
-msgstr "გაიცანი პოლიტიკოსი"
+msgid "Supporters"
+msgstr "მხარდამჭერები"
 
 msgid "Intro"
 msgstr "ინტრო"
@@ -3732,17 +3654,66 @@ msgstr "პირადი პარტიული სია"
 msgid "GeD and"
 msgstr "GeD და "
 
+msgid "Politician rating"
+msgstr "პოლიტიკური წონა"
+
+msgid "Politician Ged"
+msgstr "გამომუშავებული GED-ები"
+
+msgid "Referrals"
+msgstr "რეფერალები"
+
+msgid "Donate to politician"
+msgstr "დააფინანსე პოლიტიკოსი"
+
 msgid "Ged &#37;"
 msgstr "Ged-ების &#37;"
 
-msgid "Girchi party list"
-msgstr "გირჩის პარტიული სია"
+msgid "Disposable"
+msgstr "ერთჯერადი"
 
-msgid "Supporters"
-msgstr "მხარდამჭერები"
+msgid "Amount"
+msgstr "თანხა"
 
-msgid "Favorite news"
-msgstr "რჩეული სიახლეები"
+msgid "Enter amount of GEL"
+msgstr "მიუთითეთ თანხა"
+
+msgid "You will get"
+msgstr "თქვენ ჩაგერიცხებათ"
+
+msgid "Donation aim"
+msgstr "დაფინანსების მიზანი"
+
+msgid "Donation to politician"
+msgstr "პოლიტიკოსის შემოწირულობა"
+
+msgid "Donation settings"
+msgstr ""
+"შემოწირულობის "
+"პარამეტრები"
+
+msgid "Multiple"
+msgstr "მრავალჯერადი"
+
+msgid "Periodicity"
+msgstr "პერიოდულობა"
+
+msgid "Donation date"
+msgstr "გადახდის თარიღი "
+
+msgid "Profile"
+msgstr "პროფილი"
+
+msgid "Donate Again"
+msgstr "გადახდის გამეორება "
+
+msgid "Please choose Donation aim OR Donation to politician"
+msgstr ""
+"აირჩიეთ დაფინანსების "
+"მიზანი ან პოლიტიკოსი"
+
+msgid "All articles"
+msgstr "ყველა სტატია"
 
 msgid "Add to favorite"
 msgstr "ფავორიტებში დამატება"
@@ -3756,29 +3727,22 @@ msgstr "საჯარო პროფილის შეცვლა"
 msgid "Choose file"
 msgstr "აირჩიეთ სურათი"
 
-msgid "Donation to politician"
-msgstr "პოლიტიკოსის შემოწირულობა"
-
-msgid "Please choose Donation aim OR Donation to politician"
-msgstr ""
-"აირჩიეთ დაფინანსების "
-"მიზანი ან პოლიტიკოსი"
-
-msgid "Donation settings"
-msgstr ""
-"შემოწირულობის "
-"პარამეტრები"
-
 msgid "Choose cover photo"
 msgstr "აირჩიეთ გარეკანის ფოტო"
 
-msgid "Please choose Donation aim OR Donation to politician"
-msgstr ""
-"აირჩიეთ დაფინანსების "
-"მიზანი ან პოლიტიკოსი"
+msgid "Politicians rating"
+msgstr "პოლიტიკოსთა რეიტინგი"
+
+msgid "Party list weight"
+msgstr "პარტიული წონა"
 
 msgid "Transaction failed ,try again"
 msgstr ""
 "ტრანზაქცია უარყოფილია "
 "სადეთ თავიდან"
+
+msgid "Invalid phone number."
+msgstr ""
+"ტელეფონის ნომერი არ არის "
+"ვალიდური."
 
