--- a/config/sync/language/ka/views.view.ged_transaction.yml
+++ b/config/sync/language/ka/views.view.ged_transaction.yml
@@ -11,11 +11,6 @@ display:
         tid:
           expose:
             label: 'ტრანზაქციის ტიპი'
-      header:
-        area:
-          content:
-            value: "<p><a class=\"button button-action button--primary button--small\" href=\"/admin/content/ged_transaction/add\">Add GeD transaction</a></p>\r\n"
-            format: basic_html
       exposed_form:
         options:
           submit_button: გაფილტვრა
@@ -23,4 +18,28 @@ display:
         area:
           content:
             value: "<p><a class=\"button button-action button--primary button--small\" data-drupal-link-system-path=\"admin/content/ged_transaction/add\" href=\"/admin/content/ged_transaction/add\">ახალი ტრანზაქცია </a></p>\r\n"
+            format: full_html
+  public_page:
+    display_options:
+      fields:
+        created:
+          label: თარიღი
+        field_first_name:
+          label: სახელი
+        field_last_name:
+          label: გვარი
+        user:
+          label: მომხმარებელი
+        ged_amount:
+          label: 'Ged-ების რაოდენობა'
+        Description:
+          label: აღწერა
+      filters:
+        combine:
+          expose:
+            placeholder: ძებნა...
+      empty:
+        area:
+          content:
+            value: "<div class=\"px-3 px-md-4 py-3\">No transaction found.</div>\r\n"
             format: full_html
