--- a/custom-translations/ka.po
+++ b/custom-translations/ka.po
@@ -3,10 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-
-"POT-Creation-Date: 2019-10-10 10:21+0000\n"
-"PO-Revision-Date: 2019-10-10 10:21+0000\n"
-
+"POT-Creation-Date: 2019-10-22 09:43+0000\n"
+"PO-Revision-Date: 2019-10-22 09:43+0000\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -14,26 +12,97 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-msgid "Content type"
-msgstr "კონტენტის ტიპი"
+msgid "Enter your email address or username."
+msgstr ""
+"შეიყვანეთ თქვენი "
+"ელ.ფოსტის მისამართი"
+
+msgid "Email or username"
+msgstr "შეიყვანეთ ელ.ფოსტა "
+
+msgid "Enter the password that accompanies your email address."
+msgstr "შეიყვანეთ პაროლი "
+
+msgid "Password"
+msgstr "პაროლი"
+
+msgid "Log in"
+msgstr "შესვლა"
+
+msgid "Add effect"
+msgstr "ეფექტის დამატება"
+
+msgid "Save configuration"
+msgstr "კონფიგურაციის შენახვა"
+
+msgid "Confirm"
+msgstr "დადასტურება"
+
+msgid "Filter"
+msgstr "ფილტრი"
+
+msgid "Submit"
+msgstr "დადასტურება"
+
+msgid "Search"
+msgstr "ძიება"
+
+msgid "Settings"
+msgstr "პარამეტრები"
+
+msgid "Upload"
+msgstr "ატვირთვა"
+
+msgid "Delete"
+msgstr "წაშლა"
+
+msgid "Remove"
+msgstr "ამოშლა"
+
+msgid "Add"
+msgstr "დამატება"
+
+msgid "Create"
+msgstr "შექმნა"
+
+msgid "Install"
+msgstr "დაყენება"
+
+msgid "Save"
+msgstr "შენახვა"
+
+msgid "Export"
+msgstr "ექსპორტი"
+
+msgid "Import"
+msgstr "იმპორტი"
+
+msgid "Update"
+msgstr "განახლება"
+
+msgid "Manage"
+msgstr "მართვა"
+
+msgid "Configure"
+msgstr "კონფიგურირება"
+
+msgid "Download"
+msgstr "გადმოტვირთვა"
+
+msgid "Edit"
+msgstr "რედაქტირება"
+
+msgid "Cancel"
+msgstr "გაუქმება"
+
+msgid "Block"
+msgstr "ბლოკი"
 
 msgid "Vocabulary"
 msgstr "ლექსიკონი"
 
-msgid "Description"
-msgstr "აღწერა"
-
-msgid "User"
-msgstr "მომხმარებელი"
-
-msgid "Content"
-msgstr "კონტენტი"
-
-msgid "Donation"
-msgstr "შემოწირულობა"
-
-msgid "Block"
-msgstr "ბლოკი"
+msgid "Home"
+msgstr "მთავარი"
 
 msgid "Text format"
 msgstr "ტექსტის ფორმატი"
@@ -41,8 +110,8 @@ msgstr "ტექსტის ფორმატი"
 msgid "Language"
 msgstr "ენა"
 
-msgid "Page"
-msgstr "გვერდი"
+msgid "Content type"
+msgstr "კონტენტის ტიპი"
 
 msgid "Menu"
 msgstr "მენიუ"
@@ -53,11 +122,23 @@ msgstr "როლი"
 msgid "Date format"
 msgstr "თარიღის ფორმატი"
 
+msgid "Create new account"
+msgstr "რეგისტრაცია"
+
+msgid "Reset your password"
+msgstr "პაროლის აღდგენა"
+
+msgid "Description"
+msgstr "აღწერა"
+
+msgid "Content"
+msgstr "კონტენტი"
+
+msgid "User"
+msgstr "მომხმარებელი"
+
 msgid "Forms"
 msgstr "ფორმები"
-
-msgid "Home"
-msgstr "მთავარი"
 
 msgid "User interface"
 msgstr "მომხმარებლის ინტერფეისი"
@@ -76,9 +157,6 @@ msgstr "მომხმარებელი"
 
 msgid "Pages"
 msgstr "გვერდები"
-
-msgid "Save configuration"
-msgstr "კონფიგურაციის შენახვა"
 
 msgid "delete"
 msgstr "წაშლა"
@@ -104,12 +182,6 @@ msgid "Suffix"
 msgstr "სუფიქსი"
 
 msgid "Approve"
-msgstr "დადასტურება"
-
-msgid "Delete"
-msgstr "წაშლა"
-
-msgid "Submit"
 msgstr "დადასტურება"
 
 msgid "Operations"
@@ -168,15 +240,6 @@ msgstr "ოპერაციები"
 
 msgid "disabled"
 msgstr "გამორთულია"
-
-msgid "Confirm"
-msgstr "დადასტურება"
-
-msgid "Cancel"
-msgstr "გაუქმება"
-
-msgid "Remove"
-msgstr "ამოშლა"
 
 msgid "Last comment"
 msgstr "ბოლო კომენტრარი"
@@ -246,9 +309,6 @@ msgstr "მთავარი გვერდი"
 msgid "Home page"
 msgstr "მთავარი გვერდი"
 
-msgid "Download"
-msgstr "გადმოტვირთვა"
-
 msgid "Version"
 msgstr "ვერსია"
 
@@ -276,9 +336,6 @@ msgstr "ფაილის მდებარეობა"
 msgid "Advanced options"
 msgstr "დამატებითი ოფციები"
 
-msgid "Edit"
-msgstr "რედაქტირება"
-
 msgid "Date"
 msgstr "თარიღი"
 
@@ -287,9 +344,6 @@ msgstr "ზომა"
 
 msgid "Links"
 msgstr "ბმულები"
-
-msgid "Search"
-msgstr "ძიება"
 
 msgid "Daily"
 msgstr "ყოველდღიური"
@@ -315,9 +369,6 @@ msgstr "შეტყობინება"
 msgid "Account Name"
 msgstr "მომხმარებლის სახელი"
 
-msgid "Password"
-msgstr "პაროლი"
-
 msgid "Block settings"
 msgstr "ბლოკის პარამეტრები"
 
@@ -339,6 +390,9 @@ msgstr "სურათი"
 msgid "Types"
 msgstr "ტიპები"
 
+msgid "Hierarchy"
+msgstr "იერარქია"
+
 msgid "Required"
 msgstr "სავალდებულო"
 
@@ -353,9 +407,6 @@ msgstr "კატეგორია"
 
 msgid "Add container"
 msgstr "კონტეინერის დამატება"
-
-msgid "Settings"
-msgstr "პარამეტრები"
 
 msgid "Name"
 msgstr "სახელი"
@@ -375,14 +426,8 @@ msgstr "მშობელ გვერდზე გადასვლა"
 msgid "Go to next page"
 msgstr "შემდეგ გვერდზე გადასვლა"
 
-msgid "Import"
-msgstr "იმპორტი"
-
 msgid "Book"
 msgstr "წიგნი"
-
-msgid "Export"
-msgstr "ექსპორტი"
 
 msgid "settings"
 msgstr "პარამეტრები"
@@ -401,9 +446,6 @@ msgstr "დახმარება"
 
 msgid "Image settings"
 msgstr "სურათის პარამეტრები"
-
-msgid "Update"
-msgstr "განახლება"
 
 msgid "Open"
 msgstr "ღია"
@@ -447,9 +489,6 @@ msgstr "ახლის დამატება"
 msgid "Time"
 msgstr "დრო"
 
-msgid "Add"
-msgstr "დამატება"
-
 msgid "Length"
 msgstr "სიგრძე"
 
@@ -491,9 +530,6 @@ msgstr "ფორუმის სახელი"
 
 msgid "forum"
 msgstr "ფორუმი"
-
-msgid "Manage"
-msgstr "მართვა"
 
 msgid "Refresh"
 msgstr "განახლება"
@@ -546,9 +582,6 @@ msgstr "უცნობი"
 msgid "Attachment"
 msgstr "მიმაგრებული ფაილი"
 
-msgid "Upload"
-msgstr "ატვირთვა"
-
 msgid "Picture"
 msgstr "სურათი"
 
@@ -569,9 +602,6 @@ msgstr "ოპერაცია"
 
 msgid "Continue"
 msgstr "გაგრძელება"
-
-msgid "Configure"
-msgstr "კონფიგურირება"
 
 msgid "Email"
 msgstr "ელ. ფოსტა"
@@ -609,9 +639,6 @@ msgstr "შეტყობინების სათაური."
 msgid "Number of columns"
 msgstr "სვეტების რაოდენობა"
 
-msgid "Create"
-msgstr "შექმნა"
-
 msgid "Separator"
 msgstr "გამყოფი"
 
@@ -642,8 +669,8 @@ msgstr ""
 "კონტენტის ტიპი შვილობილი "
 "გვერდებისთვის"
 
-msgid "All"
-msgstr "ყველა"
+msgid "Active"
+msgstr "აქტიური"
 
 msgid "Done"
 msgstr "დასრულება"
@@ -668,6 +695,9 @@ msgstr "სათაურის გადაწერა"
 
 msgid "CSS class"
 msgstr "CSS კლასი"
+
+msgid "Page"
+msgstr "გვერდი"
 
 msgid "View arguments"
 msgstr "არგუმენტების ნახვა"
@@ -809,9 +839,6 @@ msgstr "გამოქვეყნებული"
 
 msgid "Signature"
 msgstr "ხელმოწერა"
-
-msgid "Filter"
-msgstr "ფილტრი"
 
 msgid "Location"
 msgstr "ადგილმდებარეობა"
@@ -1139,9 +1166,6 @@ msgstr "ყველას მონიშვნა"
 msgid "User login"
 msgstr "მომხმარებლის ავტორიზაცია"
 
-msgid "Log in"
-msgstr "შესვლა"
-
 msgid "Link text"
 msgstr "ბმულის ტექსტი"
 
@@ -1191,9 +1215,6 @@ msgstr "ანონიმური"
 
 msgid "Provider"
 msgstr "პროვაიდერი"
-
-msgid "Install"
-msgstr "დაყენება"
 
 msgid "Save and edit"
 msgstr "შენახვა და რედაქტირება"
@@ -1251,11 +1272,6 @@ msgstr "კომენტარები"
 
 msgid "Full"
 msgstr "სრული"
-
-msgid "1 new"
-msgid_plural "@count new"
-msgstr[0] "1 ახალი"
-msgstr[1] "@count ახალი"
 
 msgid "Condition"
 msgstr "პირობა"
@@ -1870,9 +1886,6 @@ msgstr "დაიწერა"
 
 msgid "Hidden"
 msgstr "დამალული"
-
-msgid "Show"
-msgstr "ჩვენება"
 
 msgid "Site language"
 msgstr "საიტის ენა"
@@ -2537,10 +2550,6 @@ msgstr "გვერდი ვერ მოიძებნა"
 msgid "More help"
 msgstr "მეტი დახმარება"
 
-
-msgid "Sizes"
-msgstr "ზომები"
-
 msgid "Add terms"
 msgstr "ტერმინების დამატება"
 
@@ -2817,6 +2826,15 @@ msgstr "საიტის ინსტალაცია"
 msgid "Finish translations"
 msgstr "თარგმანის დასრულება"
 
+msgid ""
+"By default, dates in this site will be displayed in the chosen time "
+"zone."
+msgstr ""
+"ნაგულისხმევად, ამ საიტზე "
+"თარიღები გამოჩნდება "
+"არჩეული დროის სარტყლის "
+"შესაბამისად."
+
 msgid "Update notifications"
 msgstr "განახლების შეტყობინებები"
 
@@ -2935,9 +2953,6 @@ msgstr "სტილის სახელი"
 msgid "Update effect"
 msgstr "ეფექტის განახლება"
 
-msgid "Add effect"
-msgstr "ეფექტის დამატება"
-
 msgctxt "Long month name"
 msgid "January"
 msgstr "იანვარი"
@@ -3051,66 +3066,6 @@ msgid "Database system version"
 msgstr "მონაცემთა ბაზის ვერსია"
 
 msgid ""
-"A message has been sent to the new email address %email to confirm the "
-"change. Until confirmed, your current address will be used."
-msgstr ""
-"ელ-ფოსტის ცვლილების "
-"დამადასტურებელი "
-"შეტყობინება "
-"გამოგზავნილია "
-"მისამართზე: %email. "
-"შეტყობინების "
-"დადასტურებამდე თქვენი "
-"ელ-ფოსტა რჩება უცვლელი."
-
-msgid "Donation status"
-msgstr "შემოწირულობის სტატუსი"
-
-msgid "Main navigation"
-msgstr "Main navigation"
-
-msgid "Site section links"
-msgstr "Site section links"
-
-msgid "Active"
-msgstr "აქტიური"
-
-msgid "Enter your email address or username."
-msgstr ""
-"შეიყვანეთ თქვენი "
-"ელ.ფოსტის მისამართი"
-
-msgid "Email or username"
-msgstr "შეიყვანეთ ელ.ფოსტა "
-
-msgid "Enter the password that accompanies your email address."
-msgstr "შეიყვანეთ პაროლი "
-
-msgid "Save"
-msgstr "შენახვა"
-
-msgid "Create new account"
-msgstr "რეგისტრაცია"
-
-msgid "Reset your password"
-msgstr "პაროლის აღდგენა"
-
-msgid "Hierarchy"
-msgstr "იერარქია"
-
-msgid "Add terms"
-msgstr "ტერმინების დამატება"
-
-msgid ""
-"By default, dates in this site will be displayed in the chosen time "
-"zone."
-msgstr ""
-"ნაგულისხმევად, ამ საიტზე "
-"თარიღები გამოჩნდება "
-"არჩეული დროის სარტყლის "
-"შესაბამისად."
-
-msgid ""
 "A valid email address. All emails from the system will be sent to this "
 "address. The email address is not made public and will only be used if "
 "you wish to receive a new password or wish to receive certain news or "
@@ -3135,49 +3090,6 @@ msgid "Recommendations to make your password stronger:"
 msgstr ""
 "ძლიერი პაროლისთვის "
 "გაითვალისწინეთ:"
-
-msgid "There is no content"
-msgstr "კონტენტი არ არსებობს "
-
-msgid "Become a partner"
-msgstr "გახდი პარტნიორი"
-
-msgid "Fund the GIRCHI, get the relevant GeDs and hit the leaderboard"
-msgstr ""
-"დააფინანსე გირჩი, მიიღე "
-"შესაბამისი რაოდენობის "
-"GeD-ები და მოხვდი "
-"ლიდერბორდში"
-
-msgid "Donate"
-msgstr "დააფინანსე"
-
-msgid "Last month Top partners"
-msgstr "წინა თვის ტოპ პარტნიორები"
-
-msgid "Girchi"
-msgstr "გირჩი"
-
-msgid "Search..."
-msgstr "ძებნა..."
-
-msgid "More Freedom"
-msgstr "მეტი თავისუფლება"
-
-msgid "Enter Email"
-msgstr "მიუთითეთ ელ.ფოსტა"
-
-msgid "Enter password"
-msgstr "მიუთითეთ პაროლი "
-
-msgid "Authorisation"
-msgstr "ავტორიზაცია"
-
-msgid "Password recovery"
-msgstr "აღდგენა"
-
-msgid "Ged amount"
-msgstr "Ged-ების რაოდენობა"
 
 msgid "Make it at least 12 characters"
 msgstr "გახადეთ 12 სიმბოლოზე მეტი"
@@ -3502,47 +3414,19 @@ msgstr "ყველა"
 msgid "News"
 msgstr "სიახლეები"
 
+msgid ""
+"Password reset instructions will be sent to your registered email "
+"address."
+msgstr ""
+"პაროლის აღდგენის "
+"ინსტრუქციის სანახავად "
+"შეამოწმეთ თქვენი ელ.ფოსტა"
+
+msgid "Show"
+msgstr "ჩვენება"
+
 msgid "Current password"
 msgstr "მიმდინარე პაროლი"
-
-msgid "* Referral is not required"
-msgstr ""
-"* Referral-ის მითითება "
-"სავალდებულო არაა"
-
-msgid "I read and agree to the terms and conditions"
-msgstr ""
-"წავიკითხე და ვეთანხმები "
-"რეგისტრაციის წესებს და "
-"პირობებს"
-
-msgid "You must agree to the terms and conditions before register"
-msgstr ""
-"რეგისტრაციის "
-"გასაგრძელებლად საჭიროა "
-"დაეთანხმოთ საიტის წესებს!"
-
-msgid "Share"
-msgstr "გაზიარება"
-
-msgid "Print"
-msgstr "ამობეჭვდა"
-
-msgid "Video blog"
-msgstr "ვიდეო ბლოგი"
-
-msgid "All videos"
-msgstr "ყველა ვიდეო"
-
-msgid "Reset password"
-msgstr "პაროლის აღდგენა"
-
-msgid "Further instructions have been sent to your email address."
-msgstr ""
-"შემდგომი ინსტრუქციები "
-"გაიგზავნა თქვენი "
-"ელექტრონული ფოსტის "
-"მისამართით."
 
 msgid "The changes have been saved."
 msgstr ""
@@ -3566,6 +3450,14 @@ msgstr ""
 "<a href=\":password\">დაგავიწყდა "
 "პაროლი?</a>"
 
+msgid "1 new"
+msgid_plural "@count new"
+msgstr[0] "1 ახალი"
+msgstr[1] "@count ახალი"
+
+msgid "Sizes"
+msgstr "ზომები"
+
 msgid ""
 "Your current password is missing or incorrect; it's required to change "
 "the %name."
@@ -3577,10 +3469,13 @@ msgstr ""
 
 msgid "Further instructions have been sent to your email address."
 msgstr ""
-"შემდგომი ინსტრუქციები "
-"გაიგზავნა თქვენი "
-"ელექტრონული ფოსტის "
-"მისამართით."
+"პაროლის აღდგენის "
+"ინსტრუქცია გამოგზავნილია "
+"თქვენს ელ-ფოსტაზე. იმ "
+"შემთხვევაში თუ წერილი ვერ "
+"იპოვეთ, აუცილებლად "
+"გადაამოწმეთ spam საქაღალდეც "
+"ან მოგვწერეთ Facebook-ზე :)"
 
 msgid "This login can be used only once."
 msgstr ""
@@ -3826,10 +3721,26 @@ msgstr "გაიმეორეთ პაროლი"
 msgid "members in total"
 msgstr "წევრს შორის"
 
+msgid "More Freedom"
+msgstr "მეტი თავისუფლება"
+
 msgid "all rights reserved. Girchi"
 msgstr ""
 "ყველა უფლება დაცულია. "
 "გირჩი"
+
+msgid "Become a partner"
+msgstr "გახდი პარტნიორი"
+
+msgid "Fund the GIRCHI, get the relevant GeDs and hit the leaderboard"
+msgstr ""
+"დააფინანსე გირჩი, მიიღე "
+"შესაბამისი რაოდენობის "
+"GeD-ები და მოხვდი "
+"ლიდერბორდში"
+
+msgid "Donate"
+msgstr "დააფინანსე"
 
 msgid "Top partners"
 msgstr "ტოპ პარტნიორები"
@@ -3867,8 +3778,14 @@ msgstr ""
 msgid "ძებნა..."
 msgstr "Search..."
 
+msgid "Search..."
+msgstr "ძებნა..."
+
 msgid "All news"
 msgstr "ყველა სიახლე"
+
+msgid "Last month Top partners"
+msgstr "წინა თვის ტოპ პარტნიორები"
 
 msgid "Politicians"
 msgstr "პოლიტიკოსები"
@@ -3969,22 +3886,24 @@ msgstr "სთ"
 msgid "Estimated price in month:"
 msgstr "სავარაუდო ფასი თვეში:"
 
-msgid "Transaction was successfull"
-msgstr ""
-"ტრანზაქცია დასრულდა "
-"წარმატებით\r\n"
-""
-
-msgid "You have recieved"
-msgstr ""
-"თქვენ ჩაგერიცხათ\r\n"
-""
-
 msgid "New Email"
 msgstr "ახალი ელ.ფოსტა"
 
 msgid "Enter new email"
 msgstr "შეიყვანეთ ახალი ელ.ფოსტა"
+
+msgid ""
+"A message has been sent to the new email address %email to confirm the "
+"change. Until confirmed, your current address will be used."
+msgstr ""
+"ელ-ფოსტის ცვლილების "
+"დამადასტურებელი "
+"შეტყობინება "
+"გამოგზავნილია "
+"მისამართზე: %email. "
+"შეტყობინების "
+"დადასტურებამდე თქვენი "
+"ელ-ფოსტა რჩება უცვლელი."
 
 msgid "Your email address has been updated to %mail"
 msgstr ""
@@ -4046,6 +3965,9 @@ msgstr "დააფინანსე პოლიტიკოსი"
 msgid "Ged &#37;"
 msgstr "Ged-ების &#37;"
 
+msgid "Donation"
+msgstr "შემოწირულობა"
+
 msgid "Disposable"
 msgstr "ერთჯერადი"
 
@@ -4069,6 +3991,9 @@ msgstr ""
 "შემოწირულობის "
 "პარამეტრები"
 
+msgid "Donation status"
+msgstr "შემოწირულობის სტატუსი"
+
 msgid "Multiple"
 msgstr "მრავალჯერადი"
 
@@ -4077,6 +4002,17 @@ msgstr "პერიოდულობა"
 
 msgid "Donation date"
 msgstr "გადახდის თარიღი "
+
+msgid "Transaction was successfull"
+msgstr ""
+"ტრანზაქცია დასრულდა "
+"წარმატებით\r\n"
+""
+
+msgid "You have recieved"
+msgstr ""
+"თქვენ ჩაგერიცხათ\r\n"
+""
 
 msgid "Profile"
 msgstr "პროფილი"
@@ -4091,8 +4027,8 @@ msgstr ""
 
 msgid "Transaction failed ,try again"
 msgstr ""
-"ტრანზაქცია უარყოფილია "
-"სადეთ თავიდან"
+"პაროლი წარმატებით "
+"შეიცვალა."
 
 msgid "All articles"
 msgstr "ყველა სტატია"
@@ -4118,9 +4054,6 @@ msgstr "პოლიტიკოსთა რეიტინგი"
 msgid "Party list weight"
 msgstr "პარტიული წონა"
 
-
-msgid "Transaction failed ,try again"
-
 msgid "Your new password has been saved."
 msgstr ""
 "პაროლი წარმატებით "
@@ -4135,20 +4068,14 @@ msgstr ""
 "განმეორებას აღარ "
 "საჭიროებს."
 
+msgid "Add child"
+msgstr "ბავშვის დამატება"
+
 msgid "Investor registration"
 msgstr "ინვესტორის რეგისტრაცია"
 
-msgid "Donated amount"
-msgstr "შემოწირული თანხა"
-
-msgid "Favorite Video"
-msgstr "ფავორიტი ვიდეო"
-
 msgid "Investor"
 msgstr "ინვესტორი"
-
-msgid "Add child"
-msgstr "ბავშვის დამატება"
 
 msgid "I am a parent"
 msgstr "მშობელი ვარ"
@@ -4158,3 +4085,10 @@ msgstr ""
 "მშობლებისთვის მინიმალური "
 "საინვესტიციო თანხა უნდა "
 "შეადგენდეს 10K დოლარს."
+
+msgid "Favorite Video"
+msgstr "ფავორიტი ვიდეო"
+
+msgid "Donated amount"
+msgstr "შემოწირული თანხა"
+
